--- a/styles.css
+++ b/styles.css
@@ -27,19 +27,25 @@ p{
   text-align: center;
 }
 
-
+h2{
+  font-size: 36px;
+  color: aliceblue;
+}
 
 .lists-2018{
-  margin: auto;
+  margin: 0 auto;
   padding: 50px;
   width: 500px;
   text-align: center;
   background-color: #383838;
   color: #F2F7F6;
+
 }
 
 ul{
   list-style-type: none;
+  line-height: 32px;
+  font-size: 22px;
 }
 
 .artist-name{
@@ -48,6 +54,8 @@ ul{
 
 a{
   color: aquamarine;
+
+
 }
 footer{
   background-color: #43CAAF;
