made list-2018 div dynamic

--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ p{
 .lists-2018{
   margin: auto;
   padding: 50px;
-  width: 500px;
+  width: 75%;
   text-align: center;
   background-color: #383838;
   color: #F2F7F6;
